section kenapa harus baroqah aqiqah

--- a/index.html
+++ b/index.html
@@ -22,25 +22,27 @@
         <img src="./images/heroimage.jpg" alt="hero image" class="w-full min-h-screen object-cover">
         <div class="w-full h-full bg-gradient-to-tr from-white/95 via-white/90 to-white/10 absolute"></div>
         <div class="h-full absolute flex flex-col gap-4 justify-center items-start">
-            <div class="pt-4 pl-4">
+            <div class="pl-4">
                 <img src="./images/logo.png" alt="logo barokah aqiqah">
             </div>
-            <div class="px-4 flex flex-col justify-center items-start gap-6 mt-10">
+            <div class="px-4 flex flex-col justify-center items-start gap-6 mt-4">
                 <h1 class="font-bold text-4xl leading-tight">Aqiqah Berkah dan Mudah! Spesialis Kambing Jantan Sesuai Sunnah</h1>
                 <p class="font-medium text-xl leading-normal">Ibadah aqiqah hanya sekali seumur hidup lho. Yuk, pilih layanan jasa katering yang sesuai syariat,
                     rasa lezat, dan harga bersahabat dengan Baroqah Aqiqah!
                 </p>
                 <button class="bg-primary px-6 py-4 rounded-xl font-bold text-white text-xl">
-                    <a href="#">Konsultasi Aqiqah, Yuk!</a>
+                    <a href="https://api.whatsapp.com/send/?phone=6282114144939&text=%5BGM-Kirim+Pesan+Ini+Sebagai+Bukti+Untuk+Mendapatkan+Promo+%26+Diskon+Yang+Berlaku+Bulan+Ini%5D+Assalamu%27alaikum.+Saya+Tertarik+Dengan+Promo+Diskon+nya.+Boleh+Tanya-tanya+dulu%3F&type=phone_number&app_absent=0">
+                        Konsultasi Aqiqah, Yuk!
+                    </a>
                 </button>
             </div>
         </div>
     </section>
 
-    <main class="flex flex-col justify-center items-center px-4 py-10 gap-10">
+    <main class="flex flex-col justify-center items-center px-4 py-12 gap-12">
         <section class="flex flex-col justify-center items-center gap-4">
-            <h2 class="font-bold text-primary text-center text-xl">Masih maju-mundur acara aqiqah anak karena alasan biaya? atau mungkin, Ayah Bunda takut jasa katering aqiqah tidak
-                pengalaman menyembelih hewan sesuai syariat?
+            <h2 class="font-bold text-primary text-center text-xl">Masih maju-mundur acara aqiqah anak karena alasan biaya? atau mungkin, 
+                Ayah Bunda takut jasa katering aqiqah tidak pengalaman menyembelih hewan sesuai syariat?
             </h2>
             <img src="./images/men.png" alt="men thinking image" class="pr-10">
             <p class="font-medium text-md text-center">Jangan sampai rasa bingung dan kekhawatiran tersebut menghalangi kesempatan melaksanakan
@@ -68,11 +70,58 @@
         </section>
 
         <section class="flex flex-col justify-center items-center gap-4">
-            <video src="#" class="w-full"></video>
+            <h2 class="text-primary text-xl font-bold">Mari simak dulu video berikut!</h2>
+            <div class="w-[4rem] h-[0.2rem] bg-primary"></div>
+            <div class="flex justify-center items-center w-screen">
+                <iframe class="w-full h-[16rem] md:h-96 lg:h-[32rem] xl:h-[40rem] 2xl:h-[48rem] 3xl:h-[56rem] 4xl:h-[64rem]"
+                src="https://www.youtube.com/embed/sJiwP7GUV_I?si=R0ZEn9kKQiqg1kfZ" 
+                title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" 
+                allowfullscreen>
+                </iframe>
+            </div>
+            <div class="relative gap-4 flex-col justify-center items-center -mt-[1rem] h-auto">
+                <img src="./images/transparentredimage1.png" alt="transparent red image" class="absolute h-full w-full object-cover">
+                <div class="absolute bg-primary opacity-80 h-full w-full"></div>
+                <div class="relative flex flex-col gap-4 justify-center items-center text-white h-auto px-4 py-12">
+                    <h2 class="font-medium text-md">Kami Punya Solusinya Sekarang Juga!</h2>
+                    <p class="font-bold text-lg text-center">Rasulullah Shallallahu 'Alaihi Wa Sallam bersabda: ”Setiap anak tergadai dengan aqiqahnya, maka pada hari ketujuh 
+                        disembelih hewan, dicukur habis rambutnya, dan diberi nama.” (HR. Abu Dawud no. 2838) <br> <br> Siap beraqiqah tapi tak 
+                        mau repot masak sendiri? Tenang saja! Sekarang Ayah Bunda bisa melaksanakan Aqiqah sesuai Sunnah dengan harga mulai 
+                        Rp 1,7 jutaan. Pilih jasa katering amanah, terpercaya, dan berpengalaman</p>
+                    <div class="flex flex-wrap gap-4 justify-center items-center">
+                        <img src="./images/imagefood1.png" alt="image food 1" class="rounded-lg">
+                        <img src="./images/imagefood2.png" alt="image food 2" class="rounded-lg">
+                        <img src="./images/imagefood3.png" alt="image food 3" class="rounded-lg">
+                    </div>
+                    <h2 class="font-bold text-white text-center text-lg">100% Halal. Rasa Lezat. Harga Bersahabat <br>
+                        Barokah Aqiqah: Spesialis Aqiqah Kambing Jantan Sesuai Syari'at</i></A></h2>
+                    <p class="font-medium text-md text-center text-white">Baroqah Aqiqah hadir untuk melengkapi kebahagiaan dan rasa syukur Ayah
+                        dan Bunda atas kelahiran si buah hati. Dengan pengalaman lebih dari 20 tahun, Barokah Aqiqah menawarkan jasa 
+                        katering aqiqah spesialis kambing jantan yang memastikan ibadah aqiqah Anda berjalan dengan lebih afdhol, praktis, dan penuh berkah
+                    </p>
+                    <button class="bg-secondary px-6 py-4 rounded-xl font-bold text-white text-lg">
+                        <a href="https://api.whatsapp.com/send/?phone=6282114144939&text=%5BGM-Kirim+Pesan+Ini+Sebagai+Bukti+Untuk+Mendapatkan+Promo+%26+Diskon+Yang+Berlaku+Bulan+Ini%5D+Assalamu%27alaikum.+Saya+Tertarik+Dengan+Promo+Diskon+nya.+Boleh+Tanya-tanya+dulu%3F&type=phone_number&app_absent=0">
+                            Klik di sini untuk order paket aqiqah
+                        </a>
+                    </button>
+                </div>
+            </div>
         </section>
 
-        <section>
-
+        <section class="flex flex-col justify-center items-center gap-4">
+            <h2 class="font-bold text-xl text-primary text-center">Kenapa Harus Baroqah Aqiqah? Ini Keistimewaan Kami</h2>
+            <div class="w-[4rem] h-[0.2rem] bg-primary"></div>
+            <img src="./images/logo.png" alt="logo baroqah aqiqah">
+            <div class="flex flex-wrap jutify-center items-center gap-6">
+                <div class="flex flex-col justify-center items-center gap-4">
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                </div>
+            </div>
         </section>
     </main>
 
