Kanapa harus barokah aqiqah done

--- a/index.html
+++ b/index.html
@@ -115,11 +115,66 @@
             <h2 class="font-bold text-xl text-primary text-center">Kenapa Harus Baroqah Aqiqah? Ini Keistimewaan Kami</h2>
             <div class="w-[4rem] h-[0.2rem] bg-primary"></div>
             <img src="./images/logo.png" alt="logo baroqah aqiqah">
-            <div class="flex flex-wrap jutify-center items-center gap-6">
+            <div class="flex flex-wrap jutify-center items-center gap-8 pt-4">
                 <div class="flex flex-col justify-center items-center gap-4">
-                    <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
+                    <img src="./images/brain.png" alt="brain icon" class="w-16">
+                    <h3 class="font-bold text-center">Pengalaman lebih dari 20 tahun</h3>
+                    <p class="font-normal text-center text-md">Sejak tahun 2000, Barokah Aqiqah telah menjadi pilihan keluarga dalam melaksanakan aqiqah yang sesuai sunnah. 
+                        Pengalaman kami membuat setiap proses jadi lebih mudah, lancar, dan tanpa ribet 
+                    </p>
+                </div>
+                <div class="flex flex-col justify-center items-center gap-4">
+                    <img src="./images/heart.png" alt="heart icon" class="w-16">
+                    <h3 class="font-bold text-center">Hewan sehat dan cukup umur sesuai syariat</h3>
+                    <p class="font-normal text-center text-md">Nggak perlu ragu soal kualitas. Semua kambing yang kami sediakan 
+                        dijamin sehat, cukup umur, dan memenuhi syarat sah aqiqah. Kami spesialis dalam menyediakan kambing jantan 
+                        sesuai sunnah, jadi ibadah aqiqah makin sempurna 
+                    </p>
+                </div>
+                <div class="flex flex-col justify-center items-center gap-4">
+                    <img src="./images/box.png" alt="box icon" class="w-16">
+                    <h3 class="font-bold text-center">Kemasan menarik dan rapih</h3>
+                    <p class="font-normal text-center text-md">Kami nggak cuma menyediakan jasa, tapi juga pengalaman. Dari 
+                        kemasan yang elegan hingga tambahan layanan seperti kartu ucapan eksklusif dan dokumentasi proses 
+                        penyembelihan, semuanya dibuat agar hidangan aqiqah makin spesial 
+                    </p>
+                </div>
+                <div class="flex flex-col justify-center items-center gap-4">
+                    <img src="./images/person.png" alt="person icon" class="w-16">
+                    <h3 class="font-bold text-center">Saksikan proses penyembelihan</h3>
+                    <p class="font-normal text-center text-md">Buat Anda yang ingin memastikan semuanya berjalan sesuai syariat, 
+                        kami memberikan kesempatan untuk memilih kambing sendiri dan menyaksikan langsung proses penyembelihan. 
+                        Transparansi adalah prioritas kami!
+                    </p>
+                </div>
+                <div class="flex flex-col justify-center items-center gap-4">
+                    <img src="./images/food.png" alt="food icon" class="w-16">
+                    <h3 class="font-bold text-center">Masakan lezat, higienis dan tidak bau prengus</h3>
+                    <p class="font-normal text-center text-md">Suka khawatir kambing bakal bau prengus? Tenang, masakan kami diolah 
+                        dengan teknik khusus sehingga rasa enak, bebas bau, dan siap disantap tanpa masalah. Plus, pengemasannya rapi 
+                        dan cocok untuk acara Anda
+                    </p>
+                </div>
+                <div class="flex flex-col justify-center items-center gap-4">
+                    <img src="./images/people.png" alt="people icon" class="w-16">
+                    <h3 class="font-bold text-center">Tim ahli dan profesional</h3>
+                    <p class="font-normal text-center text-md">Mulai dari penyembelihan hingga pengolahan, semua dikerjakan oleh tim 
+                        yang berpengalaman dan terlatih. Kami tahu betul bagaimana memberikan yang terbaik untuk ibadah aqiqah Anda
+                    </p>
+                </div>
+                <div class="flex flex-col justify-center items-center gap-4">
+                    <img src="./images/wa.png" alt="wa icon" class="w-16">
+                    <h3 class="font-bold text-center">Mudah pesan via whatsapp</h3>
+                    <p class="font-normal text-center text-md">Generasi sekarang pasti suka yang serba online. Tinggal klik, 
+                        konsultasi, dan pesan lewat Whatsapp semuanya mudah dan simpel
+                    </p>
+                </div>
+                <div class="flex flex-col justify-center items-center gap-4">
+                    <img src="./images/clock.png" alt="clock icon" class="w-16">
+                    <h3 class="font-bold text-center">Bisa pilih waktu penyembelihan</h3>
+                    <p class="font-normal text-center text-md">Mau aqiqah di hari ke-7, 14, atau 21? Semua bisa! Kami fleksibel 
+                        menyesuaikan waktu agar aqiqah Anda lebih mudah dan lancar
+                    </p>
                 </div>
             </div>
         </section>
