Testimonial on process

--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
             <div class="flex flex-wrap jutify-center items-center gap-8 pt-4">
                 <div class="flex flex-col justify-center items-center gap-4">
                     <img src="./images/brain.png" alt="brain icon" class="w-16">
-                    <h3 class="font-bold text-center">Pengalaman lebih dari 20 tahun</h3>
+                    <h3 class="font-bold text-center">Pengalaman Lebih dari 20 Tahun</h3>
                     <p class="font-normal text-center text-md">Sejak tahun 2000, Barokah Aqiqah telah menjadi pilihan keluarga dalam melaksanakan aqiqah yang sesuai sunnah. 
                         Pengalaman kami membuat setiap proses jadi lebih mudah, lancar, dan tanpa ribet 
                     </p>
                 </div>
                 <div class="flex flex-col justify-center items-center gap-4">
                     <img src="./images/heart.png" alt="heart icon" class="w-16">
-                    <h3 class="font-bold text-center">Hewan sehat dan cukup umur sesuai syariat</h3>
+                    <h3 class="font-bold text-center">Hewan Sehat dan Cukup Umur Sesuai Syariat</h3>
                     <p class="font-normal text-center text-md">Nggak perlu ragu soal kualitas. Semua kambing yang kami sediakan 
                         dijamin sehat, cukup umur, dan memenuhi syarat sah aqiqah. Kami spesialis dalam menyediakan kambing jantan 
                         sesuai sunnah, jadi ibadah aqiqah makin sempurna 
@@ -133,7 +133,7 @@
                 </div>
                 <div class="flex flex-col justify-center items-center gap-4">
                     <img src="./images/box.png" alt="box icon" class="w-16">
-                    <h3 class="font-bold text-center">Kemasan menarik dan rapih</h3>
+                    <h3 class="font-bold text-center">Kemasan Menarik dan Rapih</h3>
                     <p class="font-normal text-center text-md">Kami nggak cuma menyediakan jasa, tapi juga pengalaman. Dari 
                         kemasan yang elegan hingga tambahan layanan seperti kartu ucapan eksklusif dan dokumentasi proses 
                         penyembelihan, semuanya dibuat agar hidangan aqiqah makin spesial 
@@ -141,7 +141,7 @@
                 </div>
                 <div class="flex flex-col justify-center items-center gap-4">
                     <img src="./images/person.png" alt="person icon" class="w-16">
-                    <h3 class="font-bold text-center">Saksikan proses penyembelihan</h3>
+                    <h3 class="font-bold text-center">Saksikan Proses Penyembelihan</h3>
                     <p class="font-normal text-center text-md">Buat Anda yang ingin memastikan semuanya berjalan sesuai syariat, 
                         kami memberikan kesempatan untuk memilih kambing sendiri dan menyaksikan langsung proses penyembelihan. 
                         Transparansi adalah prioritas kami!
@@ -149,7 +149,7 @@
                 </div>
                 <div class="flex flex-col justify-center items-center gap-4">
                     <img src="./images/food.png" alt="food icon" class="w-16">
-                    <h3 class="font-bold text-center">Masakan lezat, higienis dan tidak bau prengus</h3>
+                    <h3 class="font-bold text-center">Masakan Lezat, Higienis dan Tidak Bau Prengus</h3>
                     <p class="font-normal text-center text-md">Suka khawatir kambing bakal bau prengus? Tenang, masakan kami diolah 
                         dengan teknik khusus sehingga rasa enak, bebas bau, dan siap disantap tanpa masalah. Plus, pengemasannya rapi 
                         dan cocok untuk acara Anda
@@ -157,24 +157,173 @@
                 </div>
                 <div class="flex flex-col justify-center items-center gap-4">
                     <img src="./images/people.png" alt="people icon" class="w-16">
-                    <h3 class="font-bold text-center">Tim ahli dan profesional</h3>
+                    <h3 class="font-bold text-center">Tim Ahli dan Profesional</h3>
                     <p class="font-normal text-center text-md">Mulai dari penyembelihan hingga pengolahan, semua dikerjakan oleh tim 
                         yang berpengalaman dan terlatih. Kami tahu betul bagaimana memberikan yang terbaik untuk ibadah aqiqah Anda
                     </p>
                 </div>
                 <div class="flex flex-col justify-center items-center gap-4">
                     <img src="./images/wa.png" alt="wa icon" class="w-16">
-                    <h3 class="font-bold text-center">Mudah pesan via whatsapp</h3>
+                    <h3 class="font-bold text-center">Mudah Pesan Via Whatsapp</h3>
                     <p class="font-normal text-center text-md">Generasi sekarang pasti suka yang serba online. Tinggal klik, 
                         konsultasi, dan pesan lewat Whatsapp semuanya mudah dan simpel
                     </p>
                 </div>
                 <div class="flex flex-col justify-center items-center gap-4">
                     <img src="./images/clock.png" alt="clock icon" class="w-16">
-                    <h3 class="font-bold text-center">Bisa pilih waktu penyembelihan</h3>
+                    <h3 class="font-bold text-center">Bisa Pilih Waktu Penyembelihan</h3>
                     <p class="font-normal text-center text-md">Mau aqiqah di hari ke-7, 14, atau 21? Semua bisa! Kami fleksibel 
                         menyesuaikan waktu agar aqiqah Anda lebih mudah dan lancar
                     </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="flex flex-col justify-center items-center gap-4">
+            <h2 class="font-bold text-xl text-primary text-center">Mengapa Kami Mengutamakan Kambing Jantan</h2>
+            <div class="w-[4rem] h-[0.2rem] bg-primary"></div>
+            <img src="./images/goat.png" alt="goat image">
+            <h3 class="font-normal text-md text-center">Kambing jantan maupun betina keduanya tetap sah dan diperbolehkan, 
+                akan tetapi kambing jantan memiliki keutamaan:</h3>
+            <div class="flex flex-wrap justify-center items-center gap-4">
+                <div class="flex flex-col justify-center items-start gap-4 bg-gradient-to-t from-primary to bg-[#9A0006] p-4 rounded-lg w-auto h-auto">
+                    <h3 class="font-bold text-white text-lg">LEBIH AFDHAL</h3>
+                    <p class="text-white font-normal">Mengikuti sunnah Rasulullah Shallallahu Alaihi Wa Sallam</p>
+                </div>
+                <div class="flex flex-col justify-center items-start gap-4 bg-gradient-to-t from-primary to bg-[#9A0006] p-4 rounded-lg w-auto h-auto">
+                    <h3 class="font-bold text-white text-lg">DAGING LEBIH BANYAK</h3>
+                    <p class="text-white font-normal">Cocok untuk berbagi keberkahan kepada lebih banyak orang</p>
+                </div>
+                <div class="flex flex-col justify-center items-start gap-4 bg-gradient-to-t from-primary to bg-[#9A0006] p-4 rounded-lg w-auto h-auto">
+                    <h3 class="font-bold text-white text-lg">KUALITAS RAS</h3>
+                    <p class="text-white font-normal">Fisik lebih gagah, daging lebih padat, dan rasa yang lebih nikmat</p>
+                </div>
+            </div>
+            <p class="font-normal text-md text-center italic">“Telah menceritakan kepada kami [Muhammad bin Abdullah bin Numair] telah menceritakan kepada kami [Hafsh bin Ghiyast] 
+                dari [Ja'far bin Muhammad] dari [Ayahnya] dari [Abu Sa'id] dia berkata: "Rasulullah Shallallahu ‘Alaihi Wa Sallam 
+                berkurban dengan seekor kambing gibas JANTAN yang bertanduk dan sekitar mulutnya berwarna hitam, kaki-kakinya berwarna 
+                hitam dan di sekitar matanya juga berwarna hitam." (HR. Ibnu Majah: 3119) Dari ‘Aisyah dan Abu Hurairah radliallahu 
+                ‘anhuma, bahwa suatu ketika Nabi Shallallahu ‘Alaihi Wa Sallam ingin berkurban, kemudian membeli dua ekor domba yang 
+                besar, gemuk, bertanduk, berwarna putih bercampur hitam, dan dikebiri. Kemudian ia menyembelihnya… (HR. Ibnu Majah 
+                dan dishahihkan Al- Albani).
+            </p>
+            <p class="font-bold text-center text-md">Hewan jantan untuk kurban lebih afdhol dibanding hewan betina karena Nabi Shallallahu ‘Alaihi Wa Sallam dalam hadits 
+                ini menyembelih dengan gibas (domba jantan), ditambah daging jantan itu lebih thoyyib (lebih enak). Namun menyembelih 
+                kurban dengan hewan betina juga dibolehkan menurut ijma’ (kata sepakat) para ulama.
+            </p>
+        </section>
+
+        <section class="flex flex-col justify-center items-center gap-4">
+            <h2 class="font-bold text-xl text-primary text-center">Apa yang Membuat Barokah Aqiqah Beda dari Lainnya?</h2>
+            <div class="w-[4rem] h-[0.2rem] bg-primary"></div>
+            <img src="./images/logo.png" alt="logo barokah aqiqah">
+            <p class="font-normal text-md text-center">Kami memiliki layanan gratis yang bukan sekedar bonus, melainkan wujud dedikasi kami memberikan pengalaman terbaik bagi keluargan Anda</p>
+            <div class="flex flex-wrap jutify-center items-center gap-8 pt-4">
+                <div class="flex flex-col justify-center items-center gap-4">
+                    <img src="./images/fork.png" alt="fork icon" class="w-16">
+                    <h3 class="font-bold text-center">Gratis Test Food</h3>
+                    <p class="font-normal text-center text-md">Ragu soal rasa? Cobain dulu test food dari kami, GRATIS! Kami pastikan 
+                        cita rasa masakan kami lezat, bebas bau prengus, dan memanjakan lidah 
+                    </p>
+                </div>
+                <div class="flex flex-col justify-center items-center gap-4">
+                    <img src="./images/gift.png" alt="gift icon" class="w-16">
+                    <h3 class="font-bold text-center">Gratis Souvenir Special</h3>
+                    <p class="font-normal text-center text-md">Setiap pesanan aqiqah dilengkapi dengan souvenir eksklusif dari Barokah 
+                        Aqiqah. Sentuhan kecil ini membuat acara Anda semakin istimewa. 
+                    </p>
+                </div>
+                <div class="flex flex-col justify-center items-center gap-4">
+                    <img src="./images/money.png" alt="money icon" class="w-16">
+                    <h3 class="font-bold text-center">Gratis Ongkir (Wilayah Jakarta Maks 35km)</h3>
+                    <p class="font-normal text-center text-md">Hemat waktu dan biaya! Pesanan Anda diantar langsung ke lokasi tanpa 
+                        tambahan ongkos kirim. Praktis, kan? 
+                    </p>
+                </div>
+                <div class="flex flex-col justify-center items-center gap-4">
+                    <img src="./images/file.png" alt="file icon" class="w-16">
+                    <h3 class="font-bold text-center">Gratis Dokumentasi Penyembelihan</h3>
+                    <p class="font-normal text-center text-md">Anda tidak sempat menyaksikan prosesnya langsung? Tenang, kami siapkan 
+                        dokumentasi penyembelihan dalam bentuk foto atau video asli tanpa editan. Transparansi adalah prioritas kami.
+                    </p>
+                </div>
+                <div class="flex flex-col justify-center items-center gap-4">
+                    <img src="./images/id.png" alt="id icon" class="w-16">
+                    <h3 class="font-bold text-center">Gratis Sertifikasi Aqiqah dengan Bingkai Eksklusif</h3>
+                    <p class="font-normal text-center text-md">Abadikan momen spesial ini dengan sertifikat aqiqah yang sudah 
+                        dilengkapi bingkai cantik. Menjadikannya kenangan indah untuk keluarga.
+                    </p>
+                </div>
+                <div class="flex flex-col justify-center items-center gap-4">
+                    <img src="./images/phone.png" alt="phone icon" class="w-16">
+                    <h3 class="font-bold text-center">Gratis Undangan Digital</h3>
+                    <p class="font-normal text-center text-md">Bikin acara aqiqah Anda lebih modern dan praktis! Kami sediakan 
+                        undangan digital berbasis web eksklusif yang mudah dibagikan ke keluarga dan kerabat
+                    </p>
+                </div>
+                <div class="flex flex-col justify-center items-center gap-4">
+                    <img src="./images/hands.png" alt="hands icon" class="w-16">
+                    <h3 class="font-bold text-center">Gratis Kartu Ucapan Eksklusif</h3>
+                    <p class="font-normal text-center text-md">Bingung bagaimana mengungkapkan rasa syukur Anda? Kami siapkan 
+                        kartu ucapan khusus dengan desain elegan yang bisa disesuaikan dengan tema acara.
+                    </p>
+                </div>
+            </div>
+            <p class="font-bold text-lg text-center">Gimana, asyik kan? Silakan coba dulu tester menu yang akan dipesan! Nikmati 
+                semua kemudahan ini hanya dengan satu klik! Jangan tunda lagi, hubungi kami sekarang untuk layanan aqiqah berkah 
+                dan eksklusif.
+            </p>
+            <button class="bg-primary px-6 py-4 rounded-xl font-bold text-white text-lg">
+                <a href="https://api.whatsapp.com/send/?phone=6282114144939&text=%5BGM-Kirim+Pesan+Ini+Sebagai+Bukti+Untuk+Mendapatkan+Promo+%26+Diskon+Yang+Berlaku+Bulan+Ini%5D+Assalamu%27alaikum.+Saya+Tertarik+Dengan+Promo+Diskon+nya.+Boleh+Tanya-tanya+dulu%3F&type=phone_number&app_absent=0">
+                    Klik di sini untuk order paket aqiqah
+                </a>
+            </button>
+        </section>
+
+        <section class="relative flex flex-wrap justify-center items-center gap-4 h-auto w-screen py-12">
+            <img src="./images/bg2.png" alt="transparent orange image" class="absolute h-full w-full object-cover">
+            <div class="absolute bg-secondary opacity-90 h-full w-full"></div>
+            <div class="relative flex flex-wrap justify-center items-center gap-4 px-4">
+                <img src="./images/photo.png" alt="photo">
+                <div class="flex flex-col gap-2 justify-center items-start">
+                    <h2>Bukan cuma adik bayi, orang dewasa juga bisa beraqiqah lho, karena ini adalah:</h2>
+                    <div class="flex flex-row justify-end items-center gap-2">
+                        <div class="bg-slate-900 size-2 rounded-full"></div>
+                        <p class="text-md font-normal">Mengikuti Sunnah Rasulullah SAW</p>
+                    </div>
+                    <div class="flex flex-row justify-end items-center gap-2">
+                        <div class="bg-slate-900 size-2 rounded-full -mt-6"></div>
+                        <p class="text-md font-normal">Bentuk rasa syukur dan taqarrub/pendekatan diri kepada Allwa SWT</p>
+                    </div>
+                    <div class="flex flex-row justify-end items-center gap-2">
+                        <div class="bg-slate-900 size-2 rounded-full -mt-6"></div>
+                        <p class="text-md font-normal">Wujud kepedulian sosial dan sarana menjalani silahturahmi dengan orang sekitar</p>
+                    </div>
+                </div>
+            </div>
+            <div class="relative flex flex-col justify-center items-center gap-4 px-4">
+                <p class="font-normal text-md text-center">Hebatnya lagi, di Barokah Aqiqah, Anda bisa:</p>
+                <div class="flex flex-col justify-center items-start gap-4">
+                    <div class="flex flex-row justify-start items-center gap-4">
+                        <img src="./images/check.png" alt="check icon" class="w-6">
+                        <p class="font-bold text-lg">Pesan secara online dengan order via Whatsapp</p>
+                    </div>
+                    <div class="flex flex-row justify-start items-center gap-4">
+                        <img src="./images/check.png" alt="check icon" class="w-6">
+                        <p class="font-bold text-lg">Masakan diantar ke tempat Anda</p>
+                    </div>
+                    <div class="flex flex-row justify-start items-center gap-4">
+                        <img src="./images/check.png" alt="check icon" class="w-6">
+                        <p class="font-bold text-lg">Dapur pengolahan higienis dan dimasak terpisah untuk masing-masing customer</p>
+                    </div>
+                    <div class="flex flex-row justify-start items-center gap-4">
+                        <img src="./images/check.png" alt="check icon" class="w-6">
+                        <p class="font-bold text-lg">Kepala, kaki dan jeroan diolah terpisah</p>
+                    </div>
+                    <div class="flex flex-row justify-start items-center gap-4">
+                        <img src="./images/check.png" alt="check icon" class="w-6">
+                        <p class="font-bold text-lg">Masakan disajikan dengan kemasan rapi dan bergaransi</p>
+                    </div>
                 </div>
             </div>
         </section>
