--- a/index.html
+++ b/index.html
@@ -327,6 +327,126 @@
                 </div>
             </div>
         </section>
+
+        <section class="flex flex-col justify-center items-center gap-4">
+            <h2 class="font-bold text-xl text-primary text-center">Masih ragu? Simak apa kata pelanggan kami dan biarkan bukti review
+                yang bicara
+            </h2>
+            <div class="w-[4rem] h-[0.2rem] bg-primary"></div>
+        </section>
+
+        <section class="flex flex-col justify-center items-center gap-4">
+            <h2 class="font-bold text-xl text-primary text-center">Ayah Bunda ingin tahu apa saja paket aqiqah yang tersedia di Barokah Aqiqah?
+                Yuk, pilih paket favorit Anda berikut:
+            </h2>
+            <div class="w-[4rem] h-[0.2rem] bg-primary"></div>
+            <div class="flex flex-col justify-center items-center gap-4">
+                <img src="./images/table1.png" alt="table image">
+                <img src="./images/table2.png" alt="table image">
+            </div>
+            <div class="self-start flex flex-col items-start gap-2">
+                <h3>Keterangan:</h3>
+                <div class="flex flex-row items-center gap-2">
+                    <div class="bg-slate-900 size-2 rounded-full"></div>
+                    <p class="text-sm font-normal">Pilihan Menu Olahan Tulang: Gulai, Tongseng dan Sop</p>
+                </div>
+                <div class="flex flex-row items-center gap-2">
+                    <div class="bg-slate-900 size-2 rounded-full"></div>
+                    <p class="text-sm font-normal">Pilihan Menu Olahan Daging: Rendang, Semur, Kambing Goreng Cabe Ijo, Krengseng,
+                        Kare dan sate</p>
+                </div>
+                <div class="flex flex-row items-center gap-2">
+                    <div class="bg-slate-900 size-2 rounded-full"></div>
+                    <p class="text-sm font-normal">Untuk hasil porsi sate, 1 porsi daging setara dengan 3 tusuk sate (1:3)</p>
+                </div>
+                <div class="flex flex-row items-center gap-2">
+                    <div class="bg-slate-900 size-2 rounded-full"></div>
+                    <p class="text-sm font-normal">Jumlah Porsi Tulang sudah termasuk jeroan dan kepala</p>
+                </div>
+                <div class="flex flex-row items-center gap-2">
+                    <div class="bg-slate-900 size-2 rounded-full"></div>
+                    <p class="text-sm font-normal">Harga di atas berlaku untuk 1 ekor kambing + masakan dalam kemasan besar</p>
+                </div>
+            </div>
+            <div class="flex flex-col justify-center items-center gap-4 w-full">
+                <div class="bg-gradient-to-t from bg-secondary to-[#8F4c08] flex flex-col justify-center items-center gap-2 px-8 py-4 rounded-lg w-full h-auto">
+                    <h3 class="font-bold text-xl text-white self-start">PAKET 50</h3>
+                    <div class="flex flex-row justify-center items-center gap-4">                       
+                        <div class="flex flex-col justify-center items-start">
+                            <p class="text-white font-normal text-md">Box/Bento (50 Paket)</p>
+                            <p class="text-white font-normal text-md">1 Ekor Kambing Type C</p>
+                        </div>
+                        <div class="flex flex-col justify-center items-start">
+                            <p class="text-white font-normal text-md">BOX</p>
+                            <p class="text-white font-normal text-md">Jantan Rp. 2.850.000</p>
+                            <p class="text-white font-normal text-md">Betina Rp. 2.450.000</p>
+                        </div>
+                        <div class="flex flex-col justify-center items-start">
+                            <p class="text-white font-normal text-md">BENTO</p>
+                            <p class="text-white font-normal text-md">Jantan Rp. 2.600.000</p>
+                            <p class="text-white font-normal text-md">Betina Rp. 2.200.000</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-gradient-to-t from bg-secondary to-[#8F4c08] flex flex-col justify-center items-center gap-2 px-8 py-4 rounded-lg w-full h-auto">
+                    <h3 class="font-bold text-xl text-white self-start">PAKET 50</h3>
+                    <div class="flex flex-row justify-center items-center gap-4">                       
+                        <div class="flex flex-col justify-center items-start">
+                            <p class="text-white font-normal text-md">Box/Bento (50 Paket)</p>
+                            <p class="text-white font-normal text-md">1 Ekor Kambing Type C</p>
+                        </div>
+                        <div class="flex flex-col justify-center items-start">
+                            <p class="text-white font-normal text-md">BOX</p>
+                            <p class="text-white font-normal text-md">Jantan Rp. 2.850.000</p>
+                            <p class="text-white font-normal text-md">Betina Rp. 2.450.000</p>
+                        </div>
+                        <div class="flex flex-col justify-center items-start">
+                            <p class="text-white font-normal text-md">BENTO</p>
+                            <p class="text-white font-normal text-md">Jantan Rp. 2.600.000</p>
+                            <p class="text-white font-normal text-md">Betina Rp. 2.200.000</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-gradient-to-t from bg-secondary to-[#8F4c08] flex flex-col justify-center items-center gap-2 px-8 py-4 rounded-lg w-full h-auto">
+                    <h3 class="font-bold text-xl text-white self-start">PAKET 50</h3>
+                    <div class="flex flex-row justify-center items-center gap-4">                       
+                        <div class="flex flex-col justify-center items-start">
+                            <p class="text-white font-normal text-md">Box/Bento (50 Paket)</p>
+                            <p class="text-white font-normal text-md">1 Ekor Kambing Type C</p>
+                        </div>
+                        <div class="flex flex-col justify-center items-start">
+                            <p class="text-white font-normal text-md">BOX</p>
+                            <p class="text-white font-normal text-md">Jantan Rp. 2.850.000</p>
+                            <p class="text-white font-normal text-md">Betina Rp. 2.450.000</p>
+                        </div>
+                        <div class="flex flex-col justify-center items-start">
+                            <p class="text-white font-normal text-md">BENTO</p>
+                            <p class="text-white font-normal text-md">Jantan Rp. 2.600.000</p>
+                            <p class="text-white font-normal text-md">Betina Rp. 2.200.000</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-gradient-to-t from bg-secondary to-[#8F4c08] flex flex-col justify-center items-center gap-2 px-8 py-4 rounded-lg w-full h-auto">
+                    <h3 class="font-bold text-xl text-white self-start">PAKET 50</h3>
+                    <div class="flex flex-row justify-center items-center gap-4">                       
+                        <div class="flex flex-col justify-center items-start">
+                            <p class="text-white font-normal text-md">Box/Bento (50 Paket)</p>
+                            <p class="text-white font-normal text-md">1 Ekor Kambing Type C</p>
+                        </div>
+                        <div class="flex flex-col justify-center items-start">
+                            <p class="text-white font-normal text-md">BOX</p>
+                            <p class="text-white font-normal text-md">Jantan Rp. 2.850.000</p>
+                            <p class="text-white font-normal text-md">Betina Rp. 2.450.000</p>
+                        </div>
+                        <div class="flex flex-col justify-center items-start">
+                            <p class="text-white font-normal text-md">BENTO</p>
+                            <p class="text-white font-normal text-md">Jantan Rp. 2.600.000</p>
+                            <p class="text-white font-normal text-md">Betina Rp. 2.200.000</p>
+                        </div>
+                    </div>
+                </div>
+            </div>    
+        </section>
     </main>
 
     <footer></footer>
