--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             <div class="w-[4rem] h-[0.2rem] bg-primary"></div>
         </section>
 
-        <section class="flex flex-col justify-center items-center gap-4">
+        <section class="flex flex-col justify-center items-center gap-4 pb-12">
             <h2 class="font-bold text-xl text-primary text-center">Ayah Bunda ingin tahu apa saja paket aqiqah yang tersedia di Barokah Aqiqah?
                 Yuk, pilih paket favorit Anda berikut:
             </h2>
@@ -445,8 +445,126 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="flex flex-wrap justify-center items-center gap-4">
+                <div class="flex flex-col justify-center items-center gap-4">
+                    <h3>Isian Bento</h3>
+                    <img src="./images/isianbento.png" alt="isian bento image">
+                    <div class="flex flex-col justify-center items-center gap-2">
+                        <div class="flex flex-row justify-start items-center gap-2">
+                            <div class="bg-slate-900 size-2 rounded-full"></div>
+                            <p class="text-sm font-normal">Untuk hasil porsi sate, 1 porsi daging setara dengan 3 tusuk sate (1:3)</p>
+                        </div>
+                        <div class="flex flex-row justify-start items-center gap-2">
+                            <div class="bg-slate-900 size-2 rounded-full"></div>
+                            <p class="text-sm font-normal">Untuk hasil porsi sate, 1 porsi daging setara dengan 3 tusuk sate (1:3)</p>
+                        </div>
+                        <div class="flex flex-row justify-start items-center gap-2">
+                            <div class="bg-slate-900 size-2 rounded-full"></div>
+                            <p class="text-sm font-normal">Untuk hasil porsi sate, 1 porsi daging setara dengan 3 tusuk sate (1:3)</p>
+                        </div>
+                        <div class="flex flex-row justify-start items-center gap-2">
+                            <div class="bg-slate-900 size-2 rounded-full"></div>
+                            <p class="text-sm font-normal">Untuk hasil porsi sate, 1 porsi daging setara dengan 3 tusuk sate (1:3)</p>
+                        </div>
+                        <div class="flex flex-row justify-start items-center gap-2">
+                            <div class="bg-slate-900 size-2 rounded-full"></div>
+                            <p class="text-sm font-normal">Untuk hasil porsi sate, 1 porsi daging setara dengan 3 tusuk sate (1:3)</p>
+                        </div>                     
+                    </div>
+                </div>
+                <div class="flex flex-col justify-center items-center gap-4">
+                    <h3>Isian Box</h3>
+                    <img src="./images/isianbox.png" alt="isian box image">
+                    <div class="flex flex-col justify-center items-center gap-2">
+                        <div class="flex flex-row justify-start items-center gap-2">
+                            <div class="bg-slate-900 size-2 rounded-full"></div>
+                            <p class="text-sm font-normal">Untuk hasil porsi sate, 1 porsi daging setara dengan 3 tusuk sate (1:3)</p>
+                        </div>
+                        <div class="flex flex-row justify-start items-center gap-2">
+                            <div class="bg-slate-900 size-2 rounded-full"></div>
+                            <p class="text-sm font-normal">Untuk hasil porsi sate, 1 porsi daging setara dengan 3 tusuk sate (1:3)</p>
+                        </div>
+                        <div class="flex flex-row justify-start items-center gap-2">
+                            <div class="bg-slate-900 size-2 rounded-full"></div>
+                            <p class="text-sm font-normal">Untuk hasil porsi sate, 1 porsi daging setara dengan 3 tusuk sate (1:3)</p>
+                        </div>
+                        <div class="flex flex-row justify-start items-center gap-2">
+                            <div class="bg-slate-900 size-2 rounded-full"></div>
+                            <p class="text-sm font-normal">Untuk hasil porsi sate, 1 porsi daging setara dengan 3 tusuk sate (1:3)</p>
+                        </div>
+                        <div class="flex flex-row justify-start items-center gap-2">
+                            <div class="bg-slate-900 size-2 rounded-full"></div>
+                            <p class="text-sm font-normal">Untuk hasil porsi sate, 1 porsi daging setara dengan 3 tusuk sate (1:3)</p>
+                        </div>
+                        <div class="flex flex-row justify-start items-center gap-2">
+                            <div class="bg-slate-900 size-2 rounded-full"></div>
+                            <p class="text-sm font-normal">Untuk hasil porsi sate, 1 porsi daging setara dengan 3 tusuk sate (1:3)</p>
+                        </div>                     
+                    </div>
+                </div>
             </div>    
         </section>
+
+        <section class="relative flex justify-center items-center gap-4 h-auto w-screen py-12">
+            <img src="./images/transparentredimage2.png" alt="transparent red image 2" class="absolute h-full w-full object-cover">
+            <div class="absolute bg-primary opacity-90 h-full w-full"></div>
+            <div class="relative flex flex-wrap justify-center items-center gap-4 px-4">
+                <img src="./images/sate.png" alt="sate image">
+                <img src="./images/gulai.png" alt="gulai image">
+                <img src="./images/tongseng.png" alt="tongseng image">
+                <img src="./images/kebuli.png" alt="kebuli image">
+                <img src="./images/rendang.png" alt="rendang image">
+                <img src="./images/semur.png" alt="semur image">
+                <img src="./images/kari.png" alt="kari image">
+                <img src="./images/krengseng.png" alt="krengseng image">
+                <img src="./images/sop.png" alt="sop image">
+                <img src="./images/cabeijo.png" alt="cabe ijo image">
+                <img src="./images/mandhi.png" alt="mandhi image">
+            </div>
+        </section>
+
+        <section class="flex flex-col justify-center items-center gap-4 py-12">
+            <h2>Jangan tunda lagi raih keberkahan aqiqah si buah hati. Whatsapp kami sekarang 
+                untuk dapatkan promo spesial bulan ini!</h2>
+            <h2>Aqiqah Hemat, Rasa Nikmat hanya di BAROKAH AQIQAH</h2>
+            <img src="./images/imagefamily.png" alt="image family">
+            <p>Pesan sekarang untuk mendapatkan diskon dan layanan gratis ongkir Klik tombol di 
+                bawah ini untuk konsultasi dan pemesanan mudah via Whatsapp</p>
+            <button class="bg-primary px-6 py-4 rounded-xl font-bold text-white text-lg">
+                <a href="https://api.whatsapp.com/send/?phone=6282114144939&text=%5BGM-Kirim+Pesan+Ini+Sebagai+Bukti+Untuk+Mendapatkan+Promo+%26+Diskon+Yang+Berlaku+Bulan+Ini%5D+Assalamu%27alaikum.+Saya+Tertarik+Dengan+Promo+Diskon+nya.+Boleh+Tanya-tanya+dulu%3F&type=phone_number&app_absent=0">
+                        Saya Mau Promo Paket Aqiqah!</a>
+            </button>  
+        </section>
+
+        <section class="flex flex-col justify-center items-center gap-4 px-4 bg-gradient-to-t from-[#E21F27] to-primary w-screen h-auto py-12">
+            <img src="./images/logo.png" alt="logo barokah aqiqah">
+            <p class="text-white">Barokah Aqiqah menawarkan berbagai pilihan paket yang disesuaikan dengan
+                kebutuhan keluarga Anda. Mulai dari kambing berkualitas dengan harga terjangkau, 
+               cita rasa yang lezat, hingga menu nasi box yang dikemas dengan rapi dan elegan.</p>
+            <p class="text-white">Dengan komitmen menjaga kualitas, kami memastikan bahwa setiap hidangan 
+                diolah sesuai syariat, higienis dan dijamin 100% halal.</p>
+            <p class="text-white">Barokah Aqiqah adalah solusi jasa katering terpercaya untuk acara aqiqah 
+                maupun tasyakuran lainnya, menghadirkan kemudahan dan keberkahan bagi 
+                Anda dan keluarga.</p>
+        </section>
+
+        <section class="flex flex-col justify-center items-center gap-4">
+            <h2 class="font-bold text-xl text-primary text-center">FAQ seputar jasa katering Barokah Aqiqah</h2>
+            <div class="w-[4rem] h-[0.2rem] bg-primary"></div>
+            <div class="w-full max-w-4xl px-4">
+                <div class="faq-item border-b border-gray-300 py-4">
+                    <button class="faq-question w-full text-left font-bold text-lg flex justify-between items-center">
+                        Apa keistimewaan Barokah Aqiqah?
+                        <span class="toggle-icon">+</span>
+                    </button>
+                    <div class="faq-answer hidden mt-2 text-md">
+                        Barokah Aqiqah adalah penyedia jasa katering aqiqah yang menawarkan berbagai pilihan paket sesuai kebutuhan keluarga Anda, dengan komitmen menjaga kualitas dan kehalalan.
+                    </div>
+                </div>
+            </div>
+        </section>  
+
     </main>
 
     <footer></footer>
