--- a/index.html
+++ b/index.html
@@ -41,36 +41,36 @@
 
     <main class="flex flex-col justify-center items-center px-4 lg:px-[4rem] py-12 gap-12 lg:gap-24">
         <section class="flex flex-col justify-center items-center gap-4 lg:gap-8 xl:gap-16 xl:pt-10">
-            <h2 class="font-bold text-primary text-center text-xl lg:text-2xl xl:text-3xl lg:leading-normal xl:leading-[3rem] xl:px-32">Masih maju-mundur acara aqiqah anak karena alasan biaya? atau mungkin, 
+            <h2 class="font-bold text-primary text-center text-xl lg:text-2xl xl:text-3xl 3xl:text-5xl 4xl:text-6xl lg:leading-normal xl:leading-[3rem] 3xl:leading-[4.3rem] 4xl:leading-[5.5rem] xl:px-32 3xl:px-[15rem] 4xl:px-[20rem]">Masih maju-mundur acara aqiqah anak karena alasan biaya? atau mungkin, 
                 Ayah Bunda takut jasa katering aqiqah tidak pengalaman menyembelih hewan sesuai syariat?
             </h2>
-            <img src="./images/men.png" alt="men thinking image" class="pr-10">
-            <p class="font-medium text-md xl:leading-normal lg:text-lg xl:text-xl text-center xl:px-32">Jangan sampai rasa bingung dan kekhawatiran tersebut menghalangi kesempatan melaksanakan
+            <img src="./images/men.png" alt="men thinking image" class="pr-10 3xl:w-[75rem] 4xl:[90rem]">
+            <p class="font-medium text-md xl:leading-normal 3xl:leading-[3.5rem] lg:text-lg xl:text-xl 3xl:text-4xl text-center xl:px-32 3xl:px-[15rem]">Jangan sampai rasa bingung dan kekhawatiran tersebut menghalangi kesempatan melaksanakan
                 ibadah sunnah yang membawa banyak keberkahan ini. Pelaksanaan aqiqah adalah bentuk rasa syukur kepada Allah SWT atas kelahiran
                 buah hati. Namun sering kali kita dihadapkan pada kendala seperti:
             </p>
-            <div class="flex flex-col gap-4 justify-center items-start">
-                <div class="flex flex-row gap-4 items-center justify-center">
-                    <img src="./images/x.png" alt="no icon" class="w-6 xl:w-8">
-                    <p class="font-bold text-xl xl:text-3xl">Takut hasil masakan kambing berbau prengus</p>
+            <div class="flex flex-col gap-4 3xl:gap-12 justify-center items-start 3xl:px-[15rem]">
+                <div class="flex flex-row gap-4 3xl:gap-8 items-center justify-center">
+                    <img src="./images/x.png" alt="no icon" class="w-6 xl:w-8 3xl:w-16">
+                    <p class="font-bold text-xl xl:text-3xl 3xl:text-5xl">Takut hasil masakan kambing berbau prengus</p>
                 </div>
-                <div class="flex flex-row gap-4 items-center justify-center">
-                    <img src="./images/x.png" alt="no icon" class="w-6 xl:w-8">
-                    <p class="font-bold text-xl xl:text-3xl">Ingin praktis, tapi takut harga yang murah malah mengorbankan kualitas</p>
+                <div class="flex flex-row gap-4 3xl:gap-8 items-center justify-center">
+                    <img src="./images/x.png" alt="no icon" class="w-6 xl:w-8 3xl:w-16">
+                    <p class="font-bold text-xl xl:text-3xl 3xl:text-5xl 3xl:leading-[4rem]">Ingin praktis, tapi takut harga yang murah malah mengorbankan kualitas</p>
                 </div>
-                <div class="flex flex-row gap-4 items-center justify-center">
-                    <img src="./images/x.png" alt="no icon" class="w-6 xl:w-8">
-                    <p class="font-bold text-xl xl:text-3xl">Ragu soal kehalalan proses penyembelihan</p>
+                <div class="flex flex-row gap-4 3xl:gap-8 items-center justify-center">
+                    <img src="./images/x.png" alt="no icon" class="w-6 xl:w-8 3xl:w-16">
+                    <p class="font-bold text-xl xl:text-3xl 3xl:text-5xl">Ragu soal kehalalan proses penyembelihan</p>
                 </div>
-                <div class="flex flex-row gap-4 items-center justify-center">
-                    <img src="./images/x.png" alt="no icon" class="w-6 xl:w-8">
-                    <p class="font-bold text-xl xl:text-3xl">Bingung mencari jasa katering akikah yang sesuai syariat</p>
+                <div class="flex flex-row gap-4 3xl:gap-8 items-center justify-center">
+                    <img src="./images/x.png" alt="no icon" class="w-6 xl:w-8 3xl:w-16">
+                    <p class="font-bold text-xl xl:text-3xl 3xl:text-5xl">Bingung mencari jasa katering akikah yang sesuai syariat</p>
                 </div>
             </div>
         </section>
 
         <section class="flex flex-col justify-center items-center gap-4 lg:gap-8">
-            <h2 class="text-primary text-xl lg:text-2xl xl:text-3xl lg:leading-normal font-bold">Mari simak dulu video berikut!</h2>
+            <h2 class="text-primary text-xl lg:text-2xl xl:text-3xl 3xl:text-5xl lg:leading-normal font-bold">Mari simak dulu video berikut!</h2>
             <div class="w-[4rem] h-[0.2rem] bg-primary"></div>
             <div class="flex justify-center items-center w-screen">
                 <iframe class="w-full h-[16rem] md:h-96 lg:h-[32rem] xl:h-[40rem] 2xl:h-[48rem] 3xl:h-[56rem] 4xl:h-[64rem]"
@@ -121,7 +121,7 @@
             <h2 class="font-bold text-xl lg:text-2xl xl:text-3xl lg:leading-normal text-primary text-center">Kenapa Harus Baroqah Aqiqah? Ini Keistimewaan Kami</h2>
             <div class="w-[4rem] h-[0.2rem] bg-primary xl:-mt-[2rem]"></div>
             <img src="./images/logo.png" alt="logo baroqah aqiqah">
-            <div class="flex flex-wrap jutify-center items-start gap-8 lg:gap-10 xl:gap-8 pt-4">
+            <div class="flex flex-wrap justify-center items-start gap-8 lg:gap-10 xl:gap-8 pt-4 bg-blue-500">
                 <div class="flex flex-col justify-start items-center gap-4 xl:h-auto xl:w-[20rem]">
                     <img src="./images/brain.png" alt="brain icon" class="w-16">
                     <h3 class="font-bold text-center lg:text-xl">Pengalaman Lebih dari 20 Tahun</h3>
@@ -224,7 +224,7 @@
             <div class="w-[4rem] h-[0.2rem] bg-primary xl:-mt-[2rem]"></div>
             <img src="./images/logo.png" alt="logo barokah aqiqah">
             <p class="font-normal lg:font-medium text-md lg:text-lg xl:text-xl xl:leading-[2rem] text-center">Kami memiliki layanan gratis yang bukan sekedar bonus, melainkan wujud dedikasi kami memberikan pengalaman terbaik bagi keluargan Anda</p>
-            <div class="flex flex-wrap jutify-center items-start gap-8 lg:gap-10 pt-4">
+            <div class="flex flex-wrap justify-center items-start gap-8 lg:gap-10 pt-4">
                 <div class="flex flex-col justify-center items-center gap-4 xl:h-auto xl:w-[19rem]">
                     <img src="./images/fork.png" alt="fork icon" class="w-16">
                     <h3 class="font-bold text-center lg:text-xl">Gratis Test Food</h3>
@@ -518,7 +518,7 @@
             <div class="absolute bg-primary opacity-90 h-full w-full"></div>
             <div class="relative flex flex-col justify-center items-center gap-4">
                 <h2 class="font-bold text-xl xl:text-3xl text-white text-center">Varian Menu <br> BAROKAH AQIQAH</h2>
-                <div class="w-[4rem] h-[0.2rem] bg-white mt-6"></div>
+                <div class="w-[4rem] h-[0.2rem] bg-white xl:mt-6"></div>
             </div>
             <div class="relative flex flex-wrap justify-center items-center gap-4 xl:gap-8 px-4 pt-4 xl:pt-8">
                 <img src="./images/sate.png" alt="sate image">
